nominate, invisible and reset card image added